Update and tidy pom
Update module-info in response so javadoc can still compile

Signed-off-by: Arjan Tijms <arjan.tijms@omnifish.ee>